add awesome code sidebar

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <script>
     window.$docsify = {
       name: '',
-      repo: ''
-      loadSidebar: true
+      repo: '',
+      loadSidebar: true,
+      loadNavbar: true
     }
   </script>
   <!-- Docsify v4 -->
